--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,22 @@
-.App {
-  text-align: center;
+html {
+    max-width: 100vw;
+    max-height: 100vh;
+    overflow: hidden;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.availability-circle {
+    position: relative;
+    display: inline-block;
+    align-self: center;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.availability-circle img {
+    position: absolute;
+    top: 0;
+    bottom: 5%;
+    left: 0;
+    right: 0;
+    margin: auto;
+    height: 4rem;
+    width: auto;
 }
