--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,28 @@
+html {
+    max-width: 100vw;
+    max-height: 100vh;
+    overflow: hidden;
+}
+
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+}
+
+.availability-circle {
+    position: relative;
+    display: inline-block;
+    align-self: center;
+}
+
+.availability-circle img {
+    position: absolute;
+    top: 0;
+    bottom: 5%;
+    left: 0;
+    right: 0;
+    margin: auto;
+    height: 4rem;
+    width: auto;
 }
